--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "barberfrontendperu": "file:",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
+    "@types/node": "^22.9.0",
+    "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
